Prefer List.of to Arrays.asList.