@@ -1,6 +1,5 @@
 package tutorialquestions.questionfe94;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -42,15 +41,15 @@ public class Example {
 
   public static void main(String[] args) {
 
-    final List<String> strings = Arrays.asList(
+    final List<String> strings = List.of(
             "1astring", "2anotherstring", "ant", "eater", "-1nofirstdigit", "9anotherstring",
             "88only8getsrooted");
 
-    final List<String> expectedReversed = Arrays.asList(
+    final List<String> expectedReversed = List.of(
             "gnirtsa1", "gnirtsrehtona2", "tna", "retae", "tigidtsrifon1-", "gnirtsrehtona9",
             "detoorsteg8ylno88");
 
-    final List<Double> expectedSqrtsOfFirstDigits = Arrays.asList(Math.sqrt(1), Math.sqrt(2),
+    final List<Double> expectedSqrtsOfFirstDigits = List.of(Math.sqrt(1), Math.sqrt(2),
             Math.sqrt(9), Math.sqrt(8));
 
     final List<String> reversed1 = reverseEachString(strings);
